welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.error
occurrences:3: error: value lenght is not a member of Array[Int]
  for(n<-0 to nums.lenght){
                   ^