welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.code
def occurrences(nums:Array[Int],lookingFor:Int):Int = {
  var A:Int=0
  for(n<-0 to nums.lenght){
    if (nums==lookingFor){
      A=A+1
    }
  }
  return A
}